bin/tests/sema/compiler/global_attribute_err.swg
#global fileprivate // swc-option sema-only
#global #[Swag] // swc-expected-error {{sema_err_not_attribute}}
